# smartswap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: HealthApi.ts  OrderBookApi.ts  QuoteApi.ts  SwapApi.ts  index.ts
api-client/models/: AddOrderRequest.ts  AddOrderResponse.ts  DeleteOrderRequest.ts  ErrorResponse.ts  HealthGet200Response.ts  Order.ts  OrderListResponse.ts  OrderbookDeletePost200Response.ts  QuoteResponse.ts  SwapMockRequest.ts  SwapMockResponse.ts  index.ts
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/.github/workflows/: fuzz-nightly.yml  fuzz.yml
backend/fuzz/: .gitignore  Cargo.toml  README.md
backend/fuzz/fuzz_targets/: README.md  api_handlers.rs  arbitrary_types.rs  fuzz_target_1.rs  orderbook.rs  pricing.rs  swap_engine.rs  types.rs
backend/infra/: prometheus.yml
backend/infra/grafana/provisioning/dashboards/: smartswap_backend.json
backend/src/: api.rs  main.rs  routes.rs  state.rs
backend/src/handlers/: mod.rs  types.rs
backend/tests/: api.rs
core/: Cargo.toml  README.md  api.yaml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_target_1.rs  orderbook.rs
core/src/: lib.rs  orderbook.rs  price_source.rs  pricing.rs  swap_engine.rs  types.rs
core/tests/: e2e.rs  orderbook_prop.rs
