[package]
name = "smartswap_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-prom = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
smartswap_core = { path = "../core", features = ["uniswap"] }
actix-cors = "0.6"
dotenv = "0.15"

[lib]
name = "smartswap_backend"
path = "src/lib.rs"