[package]
name = "smartswap_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }

[dev-dependencies]
rust_decimal_macros = "1.33"
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
proptest = "1"

[lib]
name = "smartswap_core"
path = "src/lib.rs"

[features]
uniswap = ["ethers"]