[package]
name = "backend-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
smartswap_core = { path = "../../core" }
rust_decimal = { version = "1.37", features = ["serde-with-str"] }
serde_json = "1.0"
actix-web = "4.0"
arbitrary = "1.3"
proptest = "1.4"
proptest-derive = "0.4"

[dependencies.backend]
path = ".."

[[bin]]
name = "orderbook"
path = "fuzz_targets/orderbook.rs"
test = false
doc = false
bench = false

[[bin]]
name = "swap_engine"
path = "fuzz_targets/swap_engine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "api_handlers"
path = "fuzz_targets/api_handlers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pricing"
path = "fuzz_targets/pricing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "types"
path = "fuzz_targets/types.rs"
test = false
doc = false
bench = false 