[package]
name = "smartswap_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.smartswap_core]
path = ".."

[[bin]]
name = "orderbook"
path = "fuzz_targets/orderbook.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
